syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "auth-service/auth-proto";

package auth;

service AuthService {
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc UpdateUser(UpdateUserRequest) returns(google.protobuf.Empty);
    rpc CreateUser(CreateUserRequest) returns(google.protobuf.Empty);
    rpc DeleteUser(DeleteUserRequest) returns(google.protobuf.Empty);
    rpc VerifyToken(VerifyTokenRequest) returns(VerifyTokenResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message CreateUserRequest {
    string email = 1;
    string username = 2;
    string password = 3;
}

message DeleteUserRequest {
    int32 id = 1;
}

message UpdateUserRequest {
    int32 id = 1;
    string email = 2;
    string username = 3;
    string password = 4;
    string role = 5;
}

message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    string username = 1;
    int32 id = 2;
    string role = 3;
}